# cmd/server/docs/swagger.json
@@ -101,8 +101,15 @@
                         "in": "query"
                     },
                     {
+                        "enum": [
+                            "pending",
+                            "running",
+                            "completed",
+                            "failed",
+                            "cancelled"
+                        ],
                         "type": "string",
-                        "description": "Статус задачи (pending/completed/failed/...)",
+                        "description": "Статус задачи",
                         "name": "status",
                         "in": "query"
                     },
